# CSC8508

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
Assets/Data/: Credits.txt  ItemsToLoad.csv
Assets/Meshes/: Arena_Part_A_Floor.msh  Arena_Part_A_Wall.msh  Arena_Part_A_Wall2.msh  Arena_Part_B_Floor.mat  Arena_Part_B_Floor.msh  Arena_Part_B_Wall.msh  Arena_Part_B_Wall2.msh  Arena_Part_C_Floor.mat  Arena_Part_C_Floor.msh  Arena_Part_C_Wall.mat  Arena_Part_C_Wall.msh  Arena_Part_C_Wall2.msh  Arena_Part_D_Floor.msh  Arena_Part_D_Wall.msh  Arena_Part_D_Wall2.msh  Arena_Platform_High_L_Floor.msh  Arena_Platform_High_L_Wall.msh  Arena_Platform_High_R_Floor.msh  Arena_Platform_High_R_Wall.msh  Arena_Platform_Low_Bottom_Floor.mat  Arena_Platform_Low_Bottom_Floor.msh  Arena_Platform_Low_Bottom_Wall.msh  Arena_Platform_Low_Top_Floor.msh  Arena_Platform_Low_Top_Wall.msh  Boss_Gun_Dance.anm  Boss_Gun_Defeated.anm  Boss_Gun_Idle2.anm  Boss_Gun_Idle_Aim.anm  Boss_Gun_Jump.anm  Boss_Gun_Run_Aim_B.anm  Boss_Gun_Run_Aim_BL.anm  Boss_Gun_Run_Aim_BR.anm  Boss_Gun_Run_Aim_F.anm  Boss_Gun_Run_Aim_FL.anm  Boss_Gun_Run_Aim_L.anm  Boss_Gun_Run_FR_Aim.anm  Boss_Gun_Run_N_Aim.anm  Boss_Gun_Run_R_Aim.anm  Character_Boss.mat  Character_Boss.msh  (+39 more)
Assets/Shaders/: BufferFragment.frag  CombineFrag.frag  CombineVert.vert  ScoreBar.frag  ScoreBar.vert  Texture.frag  Texture.vert  TextureUI.frag  UI.frag  map.frag  map.vert  map_initialise.frag  map_update.frag  minimap.frag  minimap.vert  pointlightfrag.frag  pointlightvertex.vert  scene.frag  scene.vert  sceneScreen.vert  sceneSkin.vert  shadowSkin.vert
Assets/Textures/: AI_Paths_Ref.psd  UI_Weapon.psd
CSC8503/: ApplyPaint.cpp  ApplyPaint.h  Audio.cpp  Audio.h  AudioEmitter.cpp  AudioEmitter.h  AudioSystem.cpp  AudioSystem.h  BaseInput.cpp  BaseInput.h  CMakeLists.txt  ControllerInput.cpp  ControllerInput.h  FreeTypeFont.cpp  FreeTypeFont.h  GameTechRenderer.cpp  GameTechRenderer.h  HitSphere.cpp  HitSphere.h  ImpactPoint.h  InputManager.h  KeyboardInput.cpp  KeyboardInput.h  Light.h  Main.cpp  NavPathFinder.cpp  NavPathFinder.h  NavPathGraphLevel.cpp  NavPathGraphLevel.h  NavPathNode.h  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  PaintBallClass.cpp  PaintBallClass.h  PaintBallClassNPC.cpp  PaintBallClassNPC.h  PaintBallProjectile.cpp  PaintBallProjectile.h  PaintableObject.cpp  (+77 more)
CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Debug.cpp  Debug.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  NavigationGrid.cpp  NavigationMesh.cpp  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PushdownMachine.cpp  QuadTree.h  RenderObject.cpp  RenderObject.h
CSC8503CoreClasses/enet/: enet.h
GNMRendering/: CMakeLists.txt  GNMRendering.vcxproj  GNMRendering.vcxproj.filters  PS4ComputeShader.cpp  PS4ComputeShader.h  PS4Frame.cpp  PS4Input.cpp  PS4MemoryAware.cpp  PS4Mesh.cpp  PS4Mesh.h  PS4RendererBase.cpp  PS4RendererBase.h  PS4Shader.cpp  PS4Shader.h  PS4Texture.cpp  PS4Texture.h  PS4Window.cpp  PS4Window.h  Ps4AudioEmitter.cpp  Ps4AudioSystem.h
NCLCoreClasses/: Assets.cpp  Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Maths.cpp  Maths.h  Matrix4.cpp  Matrix4.h  MeshAnimation.cpp  MeshGeometry.cpp  MeshGeometry.h  MeshMaterial.cpp  MeshMaterial.h  Quaternion.cpp  Quaternion.h  SimpleFont.cpp  TextureLoader.cpp  Vector3.cpp  Vector3.h  Win32Window.cpp  Win32Window.h  Window.h
New folder/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CSC8503.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
New folder/CSC8503/: CSC8503.vcxproj  CSC8503.vcxproj.filters  cmake_install.cmake
New folder/CSC8503CoreClasses/: CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  cmake_install.cmake
New folder/NCLCoreClasses/: NCLCoreClasses.vcxproj  NCLCoreClasses.vcxproj.filters  cmake_install.cmake
New folder/OpenGLRendering/: OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters  cmake_install.cmake
NewToonSplatInstaller/: NewToonSplatInstaller.vdproj
OpenGLRendering/: CMakeLists.txt  OGLComputeShader.cpp  OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLTexture.cpp
ReactPhysics3D/lib/cmake/ReactPhysics3D/: ReactPhysics3DConfig.cmake
ToonSplat/: ToonSplat.vdproj
ToonSplat Installer/: ToonSplat Installer.vdproj
VulkanRendering/: CMakeLists.txt
freetype/include/freetype2/freetype/config/: ftoption.h
freetype/lib/: freetype.lib  freetyped.lib
freetype/lib/cmake/freetype/: freetype-config-debug.cmake  freetype-config-release.cmake  freetype-config-version.cmake  freetype-config.cmake
freetype/lib/pkgconfig/: freetype2.pc
libsndfile/Debug/SndFile/: sndfile.lib
openal-soft/AL/: al.h  alc.h  alext.h
openal-soft/Debug/OpenAL/: OpenAL32.exp  common.lib  ex-common.lib
